welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value ||
  if (Math.abs(100-n) < 10) || (Math.abs(200-n) < 10) {
                            ^